2010-03-17  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixing bug in smallest ILL.
	* include/dlvhex/Logger.hpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding a test case for indirect rule to collect the bottom.
	* examples/module-Indirection.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting bottom.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Allowing empty predicate inputs.

2010-03-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/Logger.hpp: Fixed some logging information
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Add tower of hanoi examples.
	* examples/module-Hanoi.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Producing call graph.

	* testsuite/TestHexParserModule.cpp: Completing the test cases with throw requirement.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting Answer Set.

2010-03-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Logger.hpp: Introducing MLPSolver state into dlvhex.
	* include/dlvhex/State.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Throw an exception on not ic stratified program.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Throw an exception on syntax check error.

	* include/dlvhex/ModuleSyntaxChecker.hpp: First approach to incorporate MLPSolver into dlvhex.
	* include/dlvhex/State.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

2010-03-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Printing AS result without prefix.
	* include/dlvhex/Printer.hpp: Likewise.